Edit From HTML local new file

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="apple-touch-icon" sizes="76x76" href="./img/log1o.png">
     <link rel="icon" type="image/png" href="./img/logo1.png">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"/> -->
-        
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
     <title>Demo Open House</title>
 </head>
 
 <body>
     <header>
         <label><a href="#" class="logo"><img src="./img/logo1.png" width="90" alt="Logo"></a></label>
-        
+
         <label class="icon">
             <i class="fas fa-bars"></i>
         </label>
         <ul class="navbar" id="sidebar">
-            <li><a href="#"class="active">Trang chủ</a></li>
+            <li><a href="#">Trang chủ</a></li>
             <li><a href="#">Sản phẩm</a></li>
             <li><a href="#">Yêu cầu</a></li>
             <li><a href="#">Liên hệ</a></li>
@@ -31,10 +31,10 @@
         </ul>
     </header>
     <div class="once_pleace_header">
-      <div class="text_tile_content">
-        <h3 class="text_title">Authentic Products that Elevate<br> Quality & Design </h3>
-        <button class="btn_title">Button Details</button>
-      </div>
+        <div class="text_tile_content">
+            <h3 class="text_title">Authentic Products that Elevate<br> Quality & Design </h3>
+            <button class="btn_title">Button Details</button>
+        </div>
     </div>
     <div class="home_selector">
         <div class="avata_selector">
@@ -47,8 +47,27 @@
             <i class="fas fa-arrow-right"></i>
         </div>
     </div>
-    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
-    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script> -->
+
+
+    <div class="stone_seletor">
+        <div class="title_selector_stone_seletor">
+            <h2 class="title_selector_stone">STONE</h2>
+        </div>
+    </div>
+    <div class="brick_seletor">
+        <div class="title_selector_brick_seletor">
+            <h2 class="title_selector_brick">BRICK</h2>
+        </div>
+    </div>
+    <div class="stone_accents_seletor">
+        <div class="title_selector_stone_accents_seletor">
+            <h2 class="title_selector_stone">STONE ACCENTS</h2>
+        </div>
+    </div>
+
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
