--- a/index.html
+++ b/index.html
@@ -23,20 +23,21 @@
             <i class="fas fa-bars"></i>
         </label>
         <ul class="navbar" id="sidebar">
-            <li><a href="#">Trang chủ</a></li>
-            <li><a href="#">Sản phẩm</a></li>
-            <li><a href="#">Yêu cầu</a></li>
-            <li><a href="#">Liên hệ</a></li>
-            <li><a href="#">Giới thiệu</a></li>
+            <li><a href="#mainHeader">Trang chủ</a></li>
+            <li><a href="#home">Product</a></li>
+            <li><a href="#stone">Stone</a></li>
+            <li><a href="#brick">Brick</a></li>
+            <li><a href="#stoneaccents">Stone Accents</a></li>
+            <li><a href="#tabUIS">Choose Room</a></li>
         </ul>
     </header>
-    <div class="once_pleace_header">
+    <div class="once_pleace_header" id="mainHeader">
         <div class="text_tile_content">
             <h3 class="text_title">Authentic Products that Elevate<br> Quality & Design </h3>
             <button class="btn_title">Button Details</button>
         </div>
     </div>
-    <div class="home_selector">
+    <div class="home_selector" id="home">
         <div class="avata_selector">
             <img src="./img/product-rocks.png" alt="ở đây có thể có nhiều đá">
         </div>
@@ -49,22 +50,75 @@
     </div>
 
 
-    <div class="stone_seletor">
+    <div class="stone_seletor" id="stone">
         <div class="title_selector_stone_seletor">
             <h2 class="title_selector_stone">STONE</h2>
         </div>
     </div>
-    <div class="brick_seletor">
+    <div class="brick_seletor" id="brick" >
         <div class="title_selector_brick_seletor">
             <h2 class="title_selector_brick">BRICK</h2>
         </div>
     </div>
-    <div class="stone_accents_seletor">
+    <div class="stone_accents_seletor" id="stoneaccents">
         <div class="title_selector_stone_accents_seletor">
             <h2 class="title_selector_stone">STONE ACCENTS</h2>
         </div>
     </div>
 
+
+
+    <div class="tabUI" id="tabUIS">
+        <div class="tabs">
+            <div class="tab-item active">
+                <i class="fas fa-person-booth"></i>
+                ROOM1
+            </div>
+            <div class="tab-item">
+                <i class="fas fa-person-booth"></i>
+                ROOM2
+            </div>
+            <div class="tab-item">
+                <i class="fas fa-person-booth"></i>
+                ROOM3
+            </div>
+            <div class="tab-item">
+                <i class="fas fa-person-booth"></i>
+                ROOM4
+            </div>
+            <div class="line"></div>
+        </div>
+        <div class="tab-content">
+            <div class="tab-pane active">
+                <div class="img-tab-pane">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                </div>
+            </div>
+            <div class="tab-pane">
+                <div class="img-tab-pane">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                </div>
+            </div>
+            <div class="tab-pane">
+                <div class="img-tab-pane">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                </div>
+            </div>
+            <div class="tab-pane">
+                <div class="img-tab-pane">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                    <img src="./img/1.jpeg" alt="img 1" width="400" height="400">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
