--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="#tabUIS">Choose Room</a></li>
         </ul>
     </header>
+    
     <div class="once_pleace_header" id="mainHeader">
         <div class="text_tile_content">
             <h3 class="text_title">Authentic Products that Elevate<br> Quality & Design </h3>
@@ -50,23 +51,37 @@
     </div>
 
 
-    <div class="stone_seletor" id="stone">
-        <div class="title_selector_stone_seletor">
-            <h2 class="title_selector_stone">STONE</h2>
-        </div>
-    </div>
-    <div class="brick_seletor" id="brick" >
-        <div class="title_selector_brick_seletor">
-            <h2 class="title_selector_brick">BRICK</h2>
-        </div>
-    </div>
-    <div class="stone_accents_seletor" id="stoneaccents">
-        <div class="title_selector_stone_accents_seletor">
-            <h2 class="title_selector_stone">STONE ACCENTS</h2>
-        </div>
-    </div>
-
-
+    <div class="slideshow-container">
+        <!-- Kết hợp hình ảnh và nội dung cho mội phần tử trong slideshow-->
+         <div class="mySlides fade">
+           <div class="numbertext">1 / 5</div>
+           <img src="./img/1-mau-nha-dep-noi-that-hien-dai-can-80m2 (1).jpg" style="width:100%">
+           <div class="text"><b>MẪU NHÀ NỘI THẤT HIỆN ĐẠI</b></div>
+         </div>
+        <div class="mySlides fade">
+           <div class="numbertext">2 / 5</div>
+           <img src="./img/DucPhuHome_pj5uB8OhqzxVEU7PLXfm11304062018_071526_AM_.png" style="width:100%">
+           <div class="text"><b>MẪU PHÒNG KHÁCH HIỆN ĐẠI 1</b></div>
+         </div>
+        <div class="mySlides fade">
+           <div class="numbertext">3 / 5</div>
+           <img src="./img/Thiet-ke-noi-that-phong-khach-nha-pho.jpg" style="width:100%">
+           <div class="text"><b>MẪU PHÒNG KHÁCH HIỆN ĐẠI NHÀ PHỐ</b></div>
+         </div>
+         <div class="mySlides fade">
+            <div class="numbertext">4 / 5</div>
+            <img src="./img/phòng-khách-biệt-thự-1.jpg" style="width:100%">
+            <div class="text"><b>MẪU PHÒNG KHÁCH BIỆT THỰ</b></div>
+          </div>
+          <div class="mySlides fade">
+            <div class="numbertext">5 / 5</div>
+            <img src="./img/Noi-that-nguyen-can-sang-trong-nha-anh-truong (7).jpg" style="width:100%">
+            <div class="text"><b>MẪU PHÒNG LÀM VIỆC BẰNG GỖ</b></div>
+          </div>
+        <!-- Nút điều khiển mũi tên-->
+         <a class="prev" onclick="plusSlides(-1)">❮</a>
+         <a class="next" onclick="plusSlides(1)">❯</a>
+       </div>
 
     <div class="tabUI" id="tabUIS">
         <div class="tabs">
@@ -124,6 +139,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/main.js"></script>
+    
 </body>
 
 </html>
